@@ -1,6 +1,7 @@
 Version Next
 
     - Added `--no-vhost' flag (issue #117)
+    - Added `--blockCacheNumProtected' flag (pr #119)
 
 Version 1.5.4 released October 8, 2019
 
